k8s manifests update vault py adminission enable pad anti affinity update

--- a/k8s_manifests/server/vmstorage/statefulset.yaml
+++ b/k8s_manifests/server/vmstorage/statefulset.yaml
@@ -25,10 +25,10 @@ spec:
             - podAffinityTerm:
                 labelSelector:
                   matchExpressions:
-                    - key: app
+                    - key: loadtype
                       operator: In
                       values:
-                        - vmstorage
+                        - high
                 topologyKey: topology.kubernetes.io/zone
               weight: 100
       containers:
