--- a/k8s_manifests/edge/prod/jobs/cloudwatch.yaml
+++ b/k8s_manifests/edge/prod/jobs/cloudwatch.yaml
@@ -3,5 +3,5 @@
     - targets:
         - cloudwatch-exporter.monitor-agent.svc.cluster.local:9106
       labels:
-        region: ap-northeast-1
-        env: uat
+        region: ap-southeast-1
+        env: prod
